# copymanga_downloader

./: .gitignore  Cargo.toml
src/: comic.rs  driver_helper.rs  main.rs  settings.rs
