[package]
name = "copymanga_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
image = "0.24.5"
reqwest = "0.11.13"
thirtyfour = "0.31.0"
tokio = { version = "1.23.0", features = ["full"] }
url = "2.3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
if_chain = "1.0.2"
threadpool = "1.8.1"
config = "0.13.3"
serde = { version = "1.0.163", features = ["derive"] }
state = "0.5.3"
